syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

package event;

service EventApi {
    rpc Handle (TrackEventRequest) returns (TrackEventResponse) {}
}

message TrackEventRequest {
    string event = 1;
    google.protobuf.Struct properties = 2;
    EventContext context = 3;
    google.protobuf.Timestamp sent_at = 4;
    google.protobuf.Timestamp timestamp = 5;
}

message TrackEventResponse {
    enum Status {
        STATUS_OK = 0;
        STATUS_ERR = 10;
    }

    Status status = 1;
}

message EventContext {
    message App {
        string name = 1;
    }

    App app = 1;
    string ip = 2;
    string userAgent = 3;
}
